<resources>
    <string name="app_name">Caravan</string>
    <string name="preference_key">com.peppertap.caravan.PREFERENCE_KEY</string>

    <string name="peppertap_caravan">PepperTap Caravan</string>
    <string name="title_activity_orders">Orders</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_checkout_detail">Checkout</string>
    <string name="q1">1. <u>What is daily order?</u></string>
    <string name="a1">You can order perishable products (which you need daily) and during checkout, can select that order for daily delivery. PepperTap will deliver the order to you at 6am every day</string>
    <string name="q2">2. <u>What is weekly order?</u></string>
    <string name="a2">You can order non-perishable products (which you need once a week) and during checkout, can select that order for weekly delivery. PepperTap will deliver the order to you at 6am every Saturday.</string>
    <string name="q3">3. <u>How can I stop an order from getting delivered to me?</u></string>
    <string name="a3">Go to order details page via sidebar and select the order you want to stop from being delivered further.</string>
    <string name="q4">4. <u>Can I pause the delivery of an order for a time period? If so, how?</u></string>
    <string name="a4">Yes, you can. You’ll have to go to order details page via sidebar and select the order you want to pause from being delivered for the time being.</string>
    <string name="q5">5. <u>Can I resume a paused order? If so, how?</u></string>
    <string name="a5">Yes, you can. You’ll have to go to the order details page via sidebar and select the order for which you want to resume the delivery.</string>
    <string name="product_title1">Amul Taaza Milk</string>
    <string name="product_title2">Amul Gold Milk</string>
    <string name="product_title3">White Eggs</string>
    <string name="attribute1">500 ML</string>
    <string name="attribute3">6 PC</string>
    <string name="amount1">\u20B919</string>
    <string name="amount2">\u20B924</string>
    <string name="amount3">\u20B935</string>
    <string name="qty1">100</string>
    <string name="qty2">150</string>
    <string name="qty3">200</string>
    <string name="previous_order_id1">1.</string>
    <string name="previous_order_id2">2.</string>
    <string name="previous_order_id3">3.</string>
    <string name="prev_del_date1">Sun, 10 Dec</string>
    <string name="prev_del_date2">Sat, 9 Dec</string>
    <string name="prev_del_date3">Mon, 11 Dec</string>
    <string name="prev_placed_date1">Fri, 8 Dec</string>
    <string name="prev_placed_date2">Sat, 9 Dec</string>
    <string name="prev_placed_date3">Sun, 10 Dec</string>
    <string name="Rs">\u20B9</string>
    <string name="total1">\u20B91900</string>
    <string name="total2">\u20B93600</string>
    <string name="total3">\u20B97000</string>
    <string name="total_amount">\u20B912,500</string>
    <string name="total_amount2">\u20B916,000</string>
    <string name="total_amount3">\u20B99,750</string>
    <string name="total_items">3</string>
    <string name="delivered_order"><sup>*</sup>Delivered Order</string>
    <string name="resumeBtn">Resume</string>
</resources>
